Bug 630564 - Ctrl+Shift+X in the location bar in RTL mode should change the text alignment in addition to directionality; r=roc a=blocking-final+
UltraBlame original commit: 108aec53a28051831834d4f909e1336046c57dcb

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -114,6 +114,20 @@ input > .anonymous-div {
   line-height: -moz-block-height;
 }
 
+
+
+
+
+@-moz-document url-prefix(chrome://) {
+  input.uri-element-right-align:-moz-locale-dir(rtl) > .anonymous-div {
+    text-align: right !important;
+  }
+
+  input.uri-element-right-align:-moz-locale-dir(rtl) > .anonymous-div[dir=ltr] {
+    text-align: left !important;
+  }
+}
+
 textarea {
   margin: 1px 0 1px 0;
   border: 2px inset ThreeDFace;
